melhorias no token